Prevent wrapping problems in course section headers

--- a/scss/wwu2019/blocks.scss
+++ b/scss/wwu2019/blocks.scss
@@ -36,13 +36,11 @@
             border-color: $outlinegrey;
             border-style: solid;
             border-width: 2px 2px 0 2px;
-            line-height: #{$block-header-height - 2px};
             display: flex;
             justify-content: space-between;
 
             & > .card-title {
-                margin-bottom: 0;
-                line-height: #{$block-header-height - 2px};
+                margin: 4px 0;
             }
         }
 
